<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.slamgig.android.SignInActivity">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bg"
        android:layout_alignParentLeft="true"
        android:scaleType="centerCrop"
        android:layout_alignParentTop="true"/>
    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"/>

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:background="@drawable/rounded_edit_text"
                android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:background="@drawable/rounded_edit_text"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold"
                android:background="@drawable/purple_button"
                android:textColor="@color/colorWhite"
                android:layout_gravity="center_horizontal"/>

            <com.google.android.gms.common.SignInButton
                android:id="@+id/google_sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_sign_up_google"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/activity_horizontal_margin"/>
            <!--<com.facebook.login.widget.LoginButton-->
                <!--android:id="@+id/facebook_login_button"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="center_horizontal"-->
                <!--android:layout_marginTop="30dp"-->
                <!--android:layout_marginBottom="30dp" />-->

            <TextView
                android:id="@+id/sign_up_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_sign_up_text"
                android:textColor="@color/colorWhite"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:layout_gravity="center_horizontal"
                android:padding="@dimen/activity_horizontal_margin"
                android:clickable="true"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
